--- a/core/pom.xml
+++ b/core/pom.xml
@@ -308,7 +308,7 @@
 		<dependency>
 			<groupId>org.brunocvcunha.sockettester</groupId>
 			<artifactId>sockettester</artifactId>
-			<version>0.1-SNAPSHOT</version>
+			<version>0.1</version>
 		</dependency>
 
 		<dependency>
