--- a/core/pom.xml
+++ b/core/pom.xml
@@ -130,19 +130,9 @@
 				</executions>
 			</plugin>
 
-			<!--plugin>
-				<groupId>org.projectlombok</groupId>
-				<artifactId>lombok-maven-plugin</artifactId>
-				<version>1.16.8.0</version>
-				<executions>
-					<execution>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>delombok</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin-->
+			<!--plugin> <groupId>org.projectlombok</groupId> <artifactId>lombok-maven-plugin</artifactId> 
+				<version>1.16.8.0</version> <executions> <execution> <phase>generate-sources</phase> 
+				<goals> <goal>delombok</goal> </goals> </execution> </executions> </plugin -->
 
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -246,6 +236,12 @@
 			<groupId>jcifs</groupId>
 			<artifactId>jcifs</artifactId>
 			<version>1.3.17</version>
+			<exclusions>
+				<exclusion>
+					<groupId>javax.servlet</groupId>
+					<artifactId>servlet-api</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
@@ -358,7 +354,7 @@
 		<dependency>
 			<groupId>com.dropbox.core</groupId>
 			<artifactId>dropbox-core-sdk</artifactId>
-			<version>[1.7,1.8)</version>
+			<version>2.0.6</version>
 		</dependency>
 
 
@@ -395,6 +391,16 @@
 			<groupId>org.apache.axis2</groupId>
 			<artifactId>axis2-transport-local</artifactId>
 			<version>1.6.2</version>
+			<exclusions>
+				<exclusion>
+					<groupId>javax.ws.rs</groupId>
+					<artifactId>jsr311-api</artifactId>
+				</exclusion>
+				<exclusion>
+                    <groupId>javax.servlet</groupId>
+                    <artifactId>servlet-api</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.axis2</groupId>
@@ -415,11 +421,8 @@
 		</dependency>
 
 		<!-- dropped whatsapp support -->
-		<!--dependency>
-			<groupId>net.sumppen.whatsapp</groupId>
-			<artifactId>whatsapi4j</artifactId>
-			<version>1.1.0-SNAPSHOT</version>
-		</dependency-->
+		<!--dependency> <groupId>net.sumppen.whatsapp</groupId> <artifactId>whatsapi4j</artifactId> 
+			<version>1.1.0-SNAPSHOT</version> </dependency -->
 
 		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
